# dbl-artifacts

./: .gitignore  README.md  pyproject.toml
src/dbl_artifacts/: __init__.py  detect.py  errors.py  extract.py  importer.py  models.py  registry.py  storage.py
src/dbl_artifacts/extractors/: __init__.py  base.py  docx.py  eml.py  html.py  pdf.py  text.py
tests/: test_pipeline.py
